型名の見直し
