# api/openapi.yaml
@@ -288,7 +288,7 @@ components:
     # エンティティ
     Todo:
       type: object
-      required: [id, user_id, title, completed, created_at, updated_at]
+      required: [id, user_id, title, is_completed, created_at, updated_at]
       properties:
         id:
           type: string
@@ -301,7 +301,7 @@ components:
         description:
           type: string
           nullable: true
-        completed:
+        is_completed:
           type: boolean
         created_at:
           type: string
@@ -332,7 +332,7 @@ components:
         description:
           type: string
           nullable: true
-        completed:
+        is_completed:
           type: boolean
 
     SignupRequest:
